--- a/employee-app/src/main/resources/templates/formNewEmployee.html
+++ b/employee-app/src/main/resources/templates/formNewEmployee.html
@@ -1,18 +1,88 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Employee Web Application</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
+
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+          crossorigin="anonymous">
+
+    <title>Employee Management System</title>
+
+    <style>
+        body {
+            padding-top: 50px;
+        }
+
+        .special {
+            padding-top: 50px;
+        }
+    </style>
 </head>
 <body>
-<h2 class="h2">Add new employee</h2>
-<form method="post" th:action="@{/saveEmployee}" th:object="${employee}">
-    <input type="text" th:field="*{firstName}">
-    <input type="text" th:field="*{lastName}">
-    <input type="text" th:field="*{mail}">
-    <input type="password" th:field="*{password}">
-    <button type="submit" c>Add employee</button>
-</form>
+
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" th:href="@{/}">Employee Management System</a>
+        </div>
+    </div>
+</nav>
+
+<div class="container special">
+
+    <h2 class="h2">Add a New Employee</h2>
+    <div>
+        <form method="post"
+              th:action="@{/saveEmployee}" th:object="${employee}">
+            <div class="form-group">
+                <label for="firstNameInput">First Name</label>
+                <input
+                        type="text" th:field="*{firstName}" class="form-control" id="firstNameInput"
+                        aria-describedby="firstNameHelp" placeholder="Enter the first name"> <small
+                    id="firstNameHelp" class="form-text text-muted">Please enter the employee's first name.</small>
+            </div>
+            <div class="form-group">
+                <label for="lastNameInput">Last Name</label>
+                <input
+                        type="text" th:field="*{lastName}" class="form-control" id="lastNameInput"
+                        aria-describedby="lastNameHelp" placeholder="Enter the last name"> <small
+                    id="lastNameHelp" class="form-text text-muted">Please enter the employee's last name.</small>
+            </div>
+            <div class="form-group">
+                <label for="mailInput">Email</label>
+                <input
+                        type="text" th:field="*{mail}" class="form-control" id="mailInput"
+                        aria-describedby="mailHelp" placeholder="Enter email address"> <small
+                    id="mailHelp" class="form-text text-muted">Please enter the employee's email address.</small>
+            </div>
+            <div class="form-group">
+                <label for="passwordInput">Password</label>
+                <input
+                        type="password" th:field="*{password}" class="form-control" id="passwordInput"
+                        placeholder="Password">
+            </div>
+
+            <button type="submit" class="btn btn-primary">Create</button>
+        </form>
+    </div>
+
+</div>
+
+<script
+        src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script
+        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 </body>
 </html>
