--- a/employee-app/src/main/resources/templates/home.html
+++ b/employee-app/src/main/resources/templates/home.html
@@ -1,30 +1,76 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Employee Web Application</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
+
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+          crossorigin="anonymous">
+
+    <title>Employee Management System</title>
+
+    <style>
+        body {
+            padding-top: 50px;
+        }
+        .special {
+            padding-top: 50px;
+        }
+    </style>
 </head>
 <body>
-<h4><a th:href="@{/createEmployee}">Add new employee</a></h4>
-<h2 class="h2">List of employees</h2>
-<table>
-    <thead>
-    <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:if="${employees.isEmpty()}">
-        <td colspan="3">No employee in the Data Base</td>
-    </tr>
-    <tr th:each="employee: ${employees}">
-        <td><span th:text="${employee.firstName}"> First Name </span></td>
-        <td><span th:text="${employee.lastName}"> Last Name </span></td>
-        <a th:href="@{/deleteEmployee/{id}(id=${employee.id})}">Delete</a>
-    </tr>
-    </tbody>
-</table>
+
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" th:href="@{/}">Employee Management System</a>
+        </div>
+    </div>
+</nav>
+
+<div class="container special">
+    <h2 class="h2">Employee List</h2>
+    <div class="table-responsive">
+        <table class="table table-striped table-sm">
+            <thead>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:if="${employees.isEmpty()}">
+                <td colspan="3">No employees in the database</td>
+            </tr>
+            <tr th:each="employee: ${employees}">
+                <td><span th:text="${employee.firstName}"> First Name </span></td>
+                <td><span th:text="${employee.lastName}"> Last Name </span></td>
+                <td>
+                    <a th:href="@{/updateEmployee/{id}(id=${employee.id})}"><button class="btn btn-info">Edit</button></a>
+                    <a th:href="@{/deleteEmployee/{id}(id=${employee.id})}"><button class="btn btn-danger">Delete</button></a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <h4><a th:href="@{/createEmployee}">Add a New Employee</a></h4>
+</div>
+
+<script
+        src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script
+        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 </body>
 </html>
